# rpi-monitor

./: .env.example  README.md  collect.py  pyproject.toml
rpi_monitor/: collector.py
sql/: schema.sql  setup_user.sql
src/rpi_monitor/: collector.py
